# mirro-ex

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  结构映射手册.md
.github/workflows/: ci.yml
config/: conf.toml.example
docs/: matching_flow.md  struct.md  test.drawio
logs/: mirro-ex.2026-05-29
proto/: marketdata.proto
scripts/: compare_l1_to_snapshots.py  create_local_clickhouse_tables.sql  create_trading_sqlite_schema.sql  marketdata_pb2.py  nats_subscribe_snapshots.py  replay_controller.py
src/: app.rs  common.rs  config.rs  db.rs  event_bus.rs  logging.rs  main.rs  market.rs  marketdata.rs  orderbook_worker.rs  replay.rs  replay_manager.rs  sim_clock.rs  snapshot_exporter.rs  trading.rs
src/common/: order.rs  transaction.rs
src/db/: dbpool.rs  init.rs  queries.rs
src/db/queries/: order_query_common.rs  sh_order_query.rs  sz_order_query.rs  trading_account_query.rs  trading_fill_query.rs  trading_order_query.rs  trading_position_query.rs  transaction_query.rs
src/matcher/: order_book.rs
src/publisher/: dispatcher.rs  mod.rs  snapshot.rs
src/replay/: channel_replay_lane.rs  controller.rs  coordinator.rs  db_reader.rs  event.rs  mod.rs  producer.rs  reader_cursor.rs
src/trading/: error.rs  matching.rs  mod.rs  model.rs  store.rs  tests.rs  util.rs
src/web/: common.rs  events.rs  market.rs  mod.rs  replay.rs  routes.rs  static_files.rs  trading.rs
src/webdata/: event_bus.rs  market_state.rs  mod.rs
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.vue  api.ts  main.ts  style.css
