[package]
name = "mirro-ex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clickhouse = "0.15.0"
csv = "1.4.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.52.3",features = ["full"]}
toml = "0.9.8"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"
