[package]
name = "mirro-ex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-nats = "0.44.2"
async-trait = "0.1.89"
chrono = "0.4.42"
clickhouse = "0.15.0"
futures-util = "0.3.31"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
parquet = { version = "56.2.0", features = ["arrow", "zstd"] }
prost = "0.14.1"
salvo = { version = "0.84.2", features = ["sse"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.52.3",features = ["full"]}
tokio-stream = "0.1.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"

[build-dependencies]
prost-build = "0.14.1"
protoc-bin-vendored = "3.2.0"
